--- a/src/index.less
+++ b/src/index.less
@@ -1,8 +1,12 @@
 
-/*
 body
 {
-	background-color: black;
-	color: white;
+	text-align: center;
 }
-*/
+
+
+button
+{
+	padding: 1em 2em;
+	border-radius: 5px;
+}
