Patched useEffect + Patcher useRef when killing hooked component + Cleaned Parcel task + Added some comments

--- a/src/HookedComponent.less
+++ b/src/HookedComponent.less
@@ -24,4 +24,24 @@
 		margin-top: 1.4em;
 		opacity: .3;
 	}
+
+	> ul
+	{
+		list-style: none;
+		padding: 0;
+
+		li
+		{
+			display: inline-block;
+			width: 38px;
+			height: 38px;
+			padding: 1em;
+			background-color: #eee;
+			border-radius: 4px;
+			margin-left: 6px;
+			margin-right: 6px;
+			margin-bottom: 12px;
+		}
+	}
+
 }
